Troubleshooting UDP, added code to update to add values to hashtable